--- a/OfflineTrading.App/OfflineTrading.App.csproj
+++ b/OfflineTrading.App/OfflineTrading.App.csproj
@@ -104,6 +104,10 @@
     <Reference Include="System.Xaml">
       <RequiredTargetFramework>4.0</RequiredTargetFramework>
     </Reference>
+    <Reference Include="Telerik.Windows.Controls.GridView, Version=2011.1.419.35, Culture=neutral, PublicKeyToken=5803cfa389c90ce7, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\RateMovementVisualizer\ExternalDlls\Telerik.Windows.Controls.GridView.dll</HintPath>
+    </Reference>
     <Reference Include="Unity.TypedFactories, Version=1.0.0.0, Culture=neutral, PublicKeyToken=0c13295e2103ff99, processorArchitecture=MSIL">
       <HintPath>..\packages\Unity.TypedFactories.1.0.55\lib\net40\Unity.TypedFactories.dll</HintPath>
       <Private>True</Private>
